--- a/39_Clustering_com_PyCaret.ipynb
+++ b/39_Clustering_com_PyCaret.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN3Excf96rZvgesALFlIqA+",
+      "authorship_tag": "ABX9TyOlm92LYKoJBhwuEtQOE0Pf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -101,12 +101,12 @@
         "enable_colab()"
       ],
       "metadata": {
-        "id": "4jfWpBQuLJiz",
-        "outputId": "6726dbd3-27d8-4d75-e17b-0f6b2ebc433d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 349
-        }
+        },
+        "id": "4jfWpBQuLJiz",
+        "outputId": "6726dbd3-27d8-4d75-e17b-0f6b2ebc433d"
       },
       "execution_count": 1,
       "outputs": [
@@ -153,12 +153,12 @@
         "dataset = get_data('public_health')"
       ],
       "metadata": {
-        "id": "P-rpcA0pLezS",
-        "outputId": "43799c1a-175a-408a-80ca-fb03d6b96205",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 349
-        }
+        },
+        "id": "P-rpcA0pLezS",
+        "outputId": "43799c1a-175a-408a-80ca-fb03d6b96205"
       },
       "execution_count": 2,
       "outputs": [
@@ -185,6 +185,75 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# verificando o formato dos conjunto\n",
+        "dataset.shape"
+      ],
+      "metadata": {
+        "id": "0N2gsGCxL5MK",
+        "outputId": "5c448b93-8a3f-42e6-c03e-07f83a5a471c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 158
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'dataset' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-3-f544a0c1bf20>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# verificando o formato dos conjunto\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'dataset' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# separando treino e teste\n",
+        "train = dataset.sample(frac=0.95, random_state=786).reset_index(drop=True)\n",
+        "test = dataset.drop(train.index).reset_index(drop=True)"
+      ],
+      "metadata": {
+        "id": "NhYu3Q6VL91h",
+        "outputId": "5071068f-0acb-41a0-8b40-311fbc1e0fff",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 176
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'dataset' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-4-bb5fac9e299f>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# separando treino e teste\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtrain\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfrac\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.95\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m786\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreset_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mtest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreset_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'dataset' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Configurando o ambiente no PyCaret\n",
+        "Seguindo as boas práticas para desenvolvimento, vamos importar somente os módulos que vamos precisar, ao invés de importar a biblioteca inteira para utilizar meia dúzia de módulos."
+      ],
+      "metadata": {
+        "id": "L-wy805rMA0i"
+      }
     }
   ]
 }
