--- a/39_Clustering_com_PyCaret.ipynb
+++ b/39_Clustering_com_PyCaret.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOlm92LYKoJBhwuEtQOE0Pf",
+      "authorship_tag": "ABX9TyOIpmODSXnkFTiaiUA8H7Ac",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -193,12 +193,12 @@
         "dataset.shape"
       ],
       "metadata": {
-        "id": "0N2gsGCxL5MK",
-        "outputId": "5c448b93-8a3f-42e6-c03e-07f83a5a471c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 158
-        }
+        },
+        "id": "0N2gsGCxL5MK",
+        "outputId": "5c448b93-8a3f-42e6-c03e-07f83a5a471c"
       },
       "execution_count": 3,
       "outputs": [
@@ -223,12 +223,12 @@
         "test = dataset.drop(train.index).reset_index(drop=True)"
       ],
       "metadata": {
-        "id": "NhYu3Q6VL91h",
-        "outputId": "5071068f-0acb-41a0-8b40-311fbc1e0fff",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 176
-        }
+        },
+        "id": "NhYu3Q6VL91h",
+        "outputId": "5071068f-0acb-41a0-8b40-311fbc1e0fff"
       },
       "execution_count": 4,
       "outputs": [
@@ -254,6 +254,87 @@
       "metadata": {
         "id": "L-wy805rMA0i"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# importando os pacotes necessários\n",
+        "from pycaret.clustering import *"
+      ],
+      "metadata": {
+        "id": "8LyllvAJMPxp",
+        "outputId": "582e8a3b-84b6-483a-bfa7-657900ed0d7e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 331
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'pycaret'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-5-21fb379158a4>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# importando os pacotes necessários\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mpycaret\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclustering\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pycaret'",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+          ],
+          "errorDetails": {
+            "actions": [
+              {
+                "action": "open_url",
+                "actionText": "Open Examples",
+                "url": "/notebooks/snippets/importing_libraries.ipynb"
+              }
+            ]
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Agora, vamos passar os nossos dados para o PyCaret, para começarmos a explorar os dados e preparar nosso modelo.\n",
+        "\n",
+        "Aqui, vamos criar um classificador (clf), e vamos passar os dados, e a variável alvo."
+      ],
+      "metadata": {
+        "id": "5NySGxaDMS0L"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# criando o setup do PyCaret\n",
+        "clus = setup(data=train,\n",
+        "             normalize = True)"
+      ],
+      "metadata": {
+        "id": "cLRbJgzeMUwJ",
+        "outputId": "23ba6524-044c-48d3-a70c-d360595d1622",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 176
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'setup' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-6-225c60b54572>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# criando o setup do PyCaret\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m clus = setup(data=train,\n\u001b[0m\u001b[1;32m      3\u001b[0m              normalize = True)\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'setup' is not defined"
+          ]
+        }
+      ]
     }
   ]
 }
