--- a/39_Clustering_com_PyCaret.ipynb
+++ b/39_Clustering_com_PyCaret.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOIpmODSXnkFTiaiUA8H7Ac",
+      "authorship_tag": "ABX9TyOvtWJ9l0EJZyBat9YF8kav",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -262,12 +262,12 @@
         "from pycaret.clustering import *"
       ],
       "metadata": {
-        "id": "8LyllvAJMPxp",
-        "outputId": "582e8a3b-84b6-483a-bfa7-657900ed0d7e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 331
-        }
+        },
+        "id": "8LyllvAJMPxp",
+        "outputId": "582e8a3b-84b6-483a-bfa7-657900ed0d7e"
       },
       "execution_count": 5,
       "outputs": [
@@ -314,12 +314,12 @@
         "             normalize = True)"
       ],
       "metadata": {
-        "id": "cLRbJgzeMUwJ",
-        "outputId": "23ba6524-044c-48d3-a70c-d360595d1622",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 176
-        }
+        },
+        "id": "cLRbJgzeMUwJ",
+        "outputId": "23ba6524-044c-48d3-a70c-d360595d1622"
       },
       "execution_count": 6,
       "outputs": [
@@ -332,6 +332,104 @@
             "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
             "\u001b[0;32m<ipython-input-6-225c60b54572>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# criando o setup do PyCaret\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m clus = setup(data=train,\n\u001b[0m\u001b[1;32m      3\u001b[0m              normalize = True)\n",
             "\u001b[0;31mNameError\u001b[0m: name 'setup' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Comparando os Modelos\n",
+        "Aqui, vamos comparar diferentes modelos, para verificar a performance deles em nosso conjunto de dados, baseado na métrica de avaliação de nossa escolha."
+      ],
+      "metadata": {
+        "id": "viJC1J5FMkZx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# criando modelo\n",
+        "kmeans = create_model('kmeans')"
+      ],
+      "metadata": {
+        "id": "XeHi4tG2MmbI",
+        "outputId": "9413a8ac-a1f6-4e24-96c6-bd08bbf0ec60",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 158
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'create_model' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-7-b2566151a7ed>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# criando modelo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mkmeans\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreate_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'kmeans'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'create_model' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# verificando os parâmetros\n",
+        "print(kmeans)"
+      ],
+      "metadata": {
+        "id": "vxGwx-NbMoEw",
+        "outputId": "d6f8fe20-0f02-4d8f-9c82-c8e961c7b5cf",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 158
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'kmeans' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-8-7666de53dee1>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# verificando os parâmetros\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkmeans\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'kmeans' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# definindo os clusters\n",
+        "model_result = assign_model(kmeans)\n",
+        "model_result.head()"
+      ],
+      "metadata": {
+        "id": "kZZkOKO1MrR4",
+        "outputId": "07896428-d3ad-4843-fbf8-cab97a90bd00",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 176
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'assign_model' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-9-90d9ebdc14a2>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# definindo os clusters\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mmodel_result\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0massign_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkmeans\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mmodel_result\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'assign_model' is not defined"
           ]
         }
       ]
