--- a/40_AutoML_para_Classificação_com_PyCaret.ipynb
+++ b/40_AutoML_para_Classificação_com_PyCaret.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMyFdNOoLFeu4HhtduP3CN3",
+      "authorship_tag": "ABX9TyMZd2y4jB2wOgQedyTlw490",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -926,12 +926,12 @@
         "print(et)"
       ],
       "metadata": {
-        "id": "G81us5FSOx2J",
-        "outputId": "de8ae601-f949-44bf-e3f2-b7991621039e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 158
-        }
+        },
+        "id": "G81us5FSOx2J",
+        "outputId": "de8ae601-f949-44bf-e3f2-b7991621039e"
       },
       "execution_count": 17,
       "outputs": [
@@ -957,6 +957,195 @@
       ],
       "metadata": {
         "id": "buW4TGHhO0lD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# tuning de parâmetros\n",
+        "tuned_et = tune_model(et, optimize='Accuracy')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 158
+        },
+        "id": "X_UJwYUsO62i",
+        "outputId": "f6ccd8d5-03af-46af-b884-0029c70aa3a1"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'tune_model' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-18-685c6f2ed7b6>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# tuning de parâmetros\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtuned_et\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtune_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0met\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'Accuracy'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'tune_model' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# veriificando os parâmetros\n",
+        "print(tuned_et)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 158
+        },
+        "id": "_Kgs2kBGO9j0",
+        "outputId": "6633d807-04ae-4538-a654-65faa4c5b143"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'tuned_et' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-19-34c56d4c3b27>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# veriificando os parâmetros\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtuned_et\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'tuned_et' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Plotar o Modelo\n",
+        "\n",
+        "Agora você já deve ter percebido que o PyCaret facilita cada parte do processo de Machine Learning, e a visualização dos resultados não poderia ser diferente.\n",
+        "\n",
+        "É muito prático plotar uma matriz de confusão dos resultados, por exemplo."
+      ],
+      "metadata": {
+        "id": "BbEIE37pPAcp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# plotando matriz de confusão\n",
+        "plot_model(tuned_et, plot='confusion_matrix')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 158
+        },
+        "id": "pgNFOnd-PCXp",
+        "outputId": "3336f017-388d-4c1d-bd4f-e44e7d23cda2"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'plot_model' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-20-a38ddf296678>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# plotando matriz de confusão\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mplot_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtuned_et\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mplot\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'confusion_matrix'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'plot_model' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Outra visualização extremamente importante é a de `feature_importances`. Essa visualização basicamente nos mostra qual a importância de cada uma das variáveis para o resultado do modelo.\n",
+        "\n",
+        "Em outras palavras, estamos medindo o poder preditivo de cada variável."
+      ],
+      "metadata": {
+        "id": "suJHSWH9PFT6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# feature importances\n",
+        "plot_model(tuned_et, plot='feature')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 158
+        },
+        "id": "sxl0fC5wPLc4",
+        "outputId": "a0526f14-3f9a-43cd-d166-9c435e0a5be0"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'plot_model' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-21-d4034dd5abc7>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# feature importances\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mplot_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtuned_et\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mplot\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'feature'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'plot_model' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Aqui, também podemos utilizar essa visaulização interativa, que nos ajuda a entender melhor a performance de nosso modelo a partir de diferentes tipos de avaliação."
+      ],
+      "metadata": {
+        "id": "5ncTIsVuPN5A"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# avaliando o modelo\n",
+        "evaluate_model(tuned_et)"
+      ],
+      "metadata": {
+        "id": "-5InGOaVPPz_",
+        "outputId": "1a656551-0e87-45c7-9c3d-396c0c2a3276",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 158
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'evaluate_model' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-22-b338d9ab8596>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# avaliando o modelo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mevaluate_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtuned_et\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'evaluate_model' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Finalizar o Modelo\n",
+        "\n",
+        "Agora que já conseguimos instanciar, treinar e avaliar nosso modelo, é hora de fazer previsões no nosso conjunto de testes."
+      ],
+      "metadata": {
+        "id": "9lgW1X0rPTLJ"
       }
     }
   ]
