--- a/40_AutoML_para_Classificação_com_PyCaret.ipynb
+++ b/40_AutoML_para_Classificação_com_PyCaret.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMZd2y4jB2wOgQedyTlw490",
+      "authorship_tag": "ABX9TyO9BI2EzP9Of+o/2dvgYvlb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1115,12 +1115,12 @@
         "evaluate_model(tuned_et)"
       ],
       "metadata": {
-        "id": "-5InGOaVPPz_",
-        "outputId": "1a656551-0e87-45c7-9c3d-396c0c2a3276",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 158
-        }
+        },
+        "id": "-5InGOaVPPz_",
+        "outputId": "1a656551-0e87-45c7-9c3d-396c0c2a3276"
       },
       "execution_count": 22,
       "outputs": [
@@ -1147,6 +1147,76 @@
       "metadata": {
         "id": "9lgW1X0rPTLJ"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# fazendo previsões\n",
+        "predict_model(tuned_et);"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 158
+        },
+        "id": "37uAN_fJPdzR",
+        "outputId": "d2fd2207-5d3b-495e-e340-20782899ecf4"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'predict_model' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-23-86a66abb79f2>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# fazendo previsões\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mpredict_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtuned_et\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'predict_model' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# finalizando o modelo\n",
+        "final_et = finalize_model(tuned_et)"
+      ],
+      "metadata": {
+        "id": "P-amqt00PgWI",
+        "outputId": "5cf51515-43ff-4f0f-cbed-5269a679fde3",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 158
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'finalize_model' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-24-d6029c8e8d25>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# finalizando o modelo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mfinal_et\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfinalize_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtuned_et\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'finalize_model' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# verificando os parâmetros\n",
+        "print(final_et)"
+      ],
+      "metadata": {
+        "id": "jwZ75yjPPjNz"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
