--- a/40_AutoML_para_Classificação_com_PyCaret.ipynb
+++ b/40_AutoML_para_Classificação_com_PyCaret.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO9BI2EzP9Of+o/2dvgYvlb",
+      "authorship_tag": "ABX9TyNAk6RAeoNZI+nHfY4qmMCZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1184,12 +1184,12 @@
         "final_et = finalize_model(tuned_et)"
       ],
       "metadata": {
-        "id": "P-amqt00PgWI",
-        "outputId": "5cf51515-43ff-4f0f-cbed-5269a679fde3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 158
-        }
+        },
+        "id": "P-amqt00PgWI",
+        "outputId": "5cf51515-43ff-4f0f-cbed-5269a679fde3"
       },
       "execution_count": 24,
       "outputs": [
@@ -1213,10 +1213,56 @@
         "print(final_et)"
       ],
       "metadata": {
-        "id": "jwZ75yjPPjNz"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 158
+        },
+        "id": "jwZ75yjPPjNz",
+        "outputId": "f41f1aa3-708c-4eb6-cc2a-f711f3973a50"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'final_et' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-25-4608294492ff>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# verificando os parâmetros\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfinal_et\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'final_et' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# fazendo previsões com conjunto de teste\n",
+        "test_preds = predict_model(final_et, data=test)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 158
+        },
+        "id": "GHlkV9hIP8f4",
+        "outputId": "ebe0af2e-b2f2-4218-b5ad-13065313d11a"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'predict_model' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-26-82d194028fc3>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# fazendo previsões com conjunto de teste\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtest_preds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpredict_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfinal_et\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'predict_model' is not defined"
+          ]
+        }
+      ]
     }
   ]
 }
