--- a/41_Time_Series_com_Prophet_do_Facebook.ipynb
+++ b/41_Time_Series_com_Prophet_do_Facebook.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMNCRIWTxJfZuWQxohIPHq2",
+      "authorship_tag": "ABX9TyOx4ClNRy0zzalbMFB6iXld",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1081,6 +1081,49 @@
       "metadata": {
         "id": "GIjpBs--LT4m"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# definindo a função\n",
+        "def make_comparison_dataframe(historical, forecast):\n",
+        "  return forecast.set_index('ds')[['yhat', 'yhat_lower',\n",
+        "                                'yhat_upper']].join(historical.set_index('ds'))\n",
+        "cmp_df = make_comparison_dataframe(df_ts, forecast)\n",
+        "\n",
+        "def calculate_forecast_errors(df_ts, prediction_size):\n",
+        "\n",
+        "  df = df_ts.copy()\n",
+        "  df['e'] = df['y'] - df['yhat']\n",
+        "  df['p'] = 100 * df['e'] / df['y']\n",
+        "  predicted_part = df[-prediction_size:]\n",
+        "\n",
+        "  error_mean = lambda error_name: np.mean(np.abs(predicted_part[error_name]))\n",
+        "\n",
+        "  return{'MAPE': error_mean('p'), 'MAE': error_mean('e')}\n",
+        "\n",
+        "# imprimindo o MAPE e MAE\n",
+        "for err_name, err_value in calculate_forecast_errors(cmp_df, prediction_size).items():\n",
+        "  print(err_name, err_value)"
+      ],
+      "metadata": {
+        "id": "pTr5lYU6L2VV",
+        "outputId": "aa90068e-c0e3-4a46-a386-2ba90430d297",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "MAPE nan\n",
+            "MAE nan\n"
+          ]
+        }
+      ]
     }
   ]
 }
