--- a/41_Time_Series_com_Prophet_do_Facebook.ipynb
+++ b/41_Time_Series_com_Prophet_do_Facebook.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPf/8p1LqyBN5xSqNA+bpam",
+      "authorship_tag": "ABX9TyMjOHdFmohzG2xYOiRVW4V2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1646,11 +1646,11 @@
         "\tprint('\\t{}: {:.4f}'.format(key, value));"
       ],
       "metadata": {
-        "id": "CPWXUyAYNG9z",
-        "outputId": "245c8f3d-f635-4861-e2e1-0212d7c2d5d1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "CPWXUyAYNG9z",
+        "outputId": "245c8f3d-f635-4861-e2e1-0212d7c2d5d1"
       },
       "execution_count": 15,
       "outputs": [
@@ -1688,6 +1688,51 @@
       ],
       "metadata": {
         "id": "OTQLB0pONKql"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# aplicando a diferenciação\n",
+        "df_diff = df_sub.diff(1)\n",
+        "ma_diff = df_diff.rolling(24).mean()\n",
+        "std_diff = df_diff.rolling(24).std()\n",
+        "\n",
+        "fig, ax = plt.subplots(figsize=(12,8))\n",
+        "df_diff.plot(ax=ax, legend=False)\n",
+        "ma_diff.plot(ax=ax, color='r', legend=False)\n",
+        "std_diff.plot(ax=ax, color='g', legend=False)\n",
+        "plt.show()\n",
+        "\n",
+        "# extraindo os valores\n",
+        "X_diff = df_diff.y.dropna().values\n",
+        "\n",
+        "# aplicando o ADF e imprimindo os resultados\n",
+        "result_diff = adfuller(X_diff)\n",
+        "print('Augmented Dickey–Fuller')\n",
+        "print('Statistical Test: {:.4f}'.format(result_sub[0]))\n",
+        "print('P Value: {:.10f}'.format(result_sub[1]))\n",
+        "print('Critical Values:')\n",
+        "for key, value in result_sub[4].items():\n",
+        "\tprint('\\t{}: {:.4f}'.format(key, value))"
+      ],
+      "metadata": {
+        "id": "StdOGJDeNhFi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "No nosso caso, não tivemos modificações, mas achei interessante trazer novamente, para o caso de você precisar disso pra um outro projeto.\n",
+        "\n",
+        "De qualquer forma, vamos seguir!\n",
+        "\n",
+        "O primeiro passo é retomar o formato que o Prophet precisa."
+      ],
+      "metadata": {
+        "id": "eELThg8kNjpC"
       }
     }
   ]
